changed styling some, linked to working app.js

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     </div>
     
 
-   <script src="assets/javascript/app2.js"></script> 
+   <script src="assets/javascript/app.js"></script> 
 </body>
 </html>
